# CREDENCE

./: .env.example  .gitignore  .prettierignore  ARCHITECTURE.md  Anchor.toml  INTEGRATIONS.md  PRODUCTION_READINESS.md  PROGRAMS.md  README.md  TECH_STACK.md  TODO.md  TRACKS.md  USER_FLOWS.md  package-lock.json  package.json  qvac.config.json  tsconfig.json
api/: .env.example  package-lock.json  package.json
app/: .env.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
circuits/: README.md  credit_score.circom
docs/: CREDENCE_PROJECT.md  Credence-Hackathon-Deck.pptx  Credence-Superteam-Hackathon-Deck.pptx  DEVNET_RUNBOOK.md  artifact-build-manifest.json  credence-superteam-deck-manifest.json
migrations/: deploy.ts
programs/axiom/: Cargo.toml
programs/axiom/src/: constants.rs  error.rs  events.rs  ika.rs  kamino.rs  lib.rs  verifying_key.rs  zk.rs
programs/axiom/src/instructions/: credit_registry_ix.rs  dispute_ix.rs  ika_policy_ix.rs  initialize.rs  kamino_ix.rs  lending_pool_ix.rs  liquidation_ix.rs  mod.rs  reputation_ix.rs  stream_repay_ix.rs
programs/axiom/src/state/: collateral_escrow.rs  credit_proof.rs  dispute.rs  ika_policy.rs  lender_position.rs  lending_pool.rs  liquidation.rs  loan.rs  mod.rs  repayment_stream.rs  reputation.rs
scripts/: bootstrap-localnet.sh  claim-repayments-devnet.ts  close-repayment-stream-devnet.ts  demo-e2e.ts  deposit-lender-devnet.ts  devnet-axiom-utils.ts  devnet-register-zk-proof.ts  devnet-smoke.ts  disburse-loan-devnet.ts  execute-liquidation-devnet.ts  fund-devnet-pool.ts  qvac-smoke.ts  (+15 more)
(+130 files in other folders)
