[package]
name = "axiom"
version = "0.1.0"
description = "AXIOM sovereign AI credit and yield protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "axiom"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-keccak-hasher = "2.2.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
